--- a/css/main.css
+++ b/css/main.css
@@ -476,6 +476,11 @@ footer{
 		padding-top: 2rem;
 	}
 
+	.list li a{
+		text-decoration:none;
+		color:#2c78b7; 
+	}
+
 	/*comment section*/
 	.feedback{
 		font-size:1.4rem;
